package com.ivatolm.sem6.third;

public class Island {

	private String name;

	public Island(String name) {
		this.name = name;
	}

}
