package com.ivatolm.sem6.third;

public class River {

	private String name;

	River(String name) {
		this.name = name;
	}

}
