package com.ivatolm.sem6.third;

public class Transport {

	private Integer id;
	private String name;

	public Transport(Integer id, String name) {
		this.id = id;
		this.name = name;
	}

}
