@startuml models

Galaxy o-- Planet
' Moon *-- Planet
' Sattelite *-- Planet

Planet *-- Island
Planet *-- River
' Planet *-- Mountain

Boat <|.. Transport

Transport <.. Human

class Galaxy {
    String name
    ---
    Vector3 position
    ' Vector3 velocity
    Planet[] planets
}

class Planet {
    String name
    ---
    Vector3 position
    ' Vector3 velocity
    Enum state
    Island[] islands
    River[] rivers
}

class Island {
    String name
    ---
    Vector3 position
    ' Double area
}

class River {
    String name
    ---
    Vector3[] boundaries
    Double width
}

class Human {
    Integer id
    ---
    String name
    Vector3 position
    Vector3 velocity
    Transport *currentTransport
}

class Transport {
    Integer id
    ---
    String name
    Vector3 position
    Vector3 velocity
}

class Boat {
    Integer id
    ---
    String name
    Vector3 position
    Vector3 velocity
    ---
    Enum engineState
    Double enginePower
}

@enduml
